# ML-based-Predictive-Maintenance-Pipeline

./: .env.example  README.md  pyproject.toml
configs/: feature_config.yaml
deploy/: Dockerfile
predictive_maintenance/: .gitignore  Makefile
predictive_maintenance/configs/: config.yaml  model_config.yaml
predictive_maintenance/deploy/: docker-compose.yaml  requirements.txt
predictive_maintenance/scripts/: download_data.py  inference_demo.py
predictive_maintenance/src/deployment/: __init__.py  onnx_exporter.py
predictive_maintenance/src/features/: __init__.py  deep_embeddings.py  rolling_aggregator.py  spectral_features.py
predictive_maintenance/src/training/: trainer.py  tuner.py
predictive_maintenance/src/visualization/: signal_plots.py
predictive_maintenance/tests/: test_features.py  test_inference.py  test_model.py
scripts/: train_pipeline.py
src/data/: augmenter.py  loader.py  preprocessor.py
src/deployment/: inference.py
src/features/: stat_features.py
src/models/: __init__.py  cost_sensitive.py  lgbm_classifier.py  timesnet_extractor.py
src/training/: __init__.py  validator.py
src/visualization/: __init__.py  metrics_plots.py
